@@ -9,6 +9,9 @@ Version 1.11.0+svn:
    * Updated translations:
  * User interface:
    * Healing animations are now played when poison is cured.
+   * The recruit and recall commands are restored when right-clicking on a
+     leader, but with new semantics -- only that leader's recruits/recalls will
+     be presented as options.
  * Miscellaneous and bug fixes:
    * Fix invalid memory access crash resulting from deleting all saved games
      in the Load Game dialog
